--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "App",
+    "name": "Dreams_App",
     "slug": "App",
     "version": "1.0.0",
     "orientation": "portrait",
