--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-firebase/firestore": "^12.3.0",
+    "@react-native-firebase/firestore": "^12.4.0",
     "@react-navigation/bottom-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
@@ -20,8 +20,9 @@
     "react-native": "D:\\Code\\Dreams\\App\\react-native-sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-web": "^0.17.1",
-    "react-navigation": "^4.4.4"
+    "react-native-restart": "^0.0.22",
+    "react-native-screens": "~3.4.0",
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
